<resources>
    <string name="app_name">Taksim</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="uyeOl">Üye Ol</string>
    <string name="signup_phone">Telefon Numarası</string>
    <string name="signup_phone_kod">Kod</string>
    <string name="uyeOl_2">Lütfen telefon numaranızı dogrulayın</string>
    <string name="ad">Ad</string>
    <string name="soyad">Soyad</string>
    <string name="mail">E-mail</string>
    <string name="giris">Giriş Yap</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="title_activity_maps">Map</string>

    <string name="uygulama_cikis">Çıkış yap</string>
    <string name="hesap_degistir">Çıkış yapmak istediğinize emin misiniz?</string>
    <string name="iptal">İptal</string>
    <string name="hesap_cikis">Evet</string>

    <string name="google_maps_key">AIzaSyDM3DBOTC-v9VMTmifoIui7Y-6508vnXcc</string>
    <string name="google_server_key">AIzaSyB9HiJWCg4vKcZUSr8bH2LgqjdIAzeEey0</string>
    <string name="destination">Nereye gitmek istiyorsunuz?</string>
    <string name="starting_place">Başlangıç yerini seçiniz</string>
    <string name="profil_title">Profilim</string>
    <string name="promosyon_title">Promosyon</string>
    <string name="promosyon_kod">Promosyon kodu kullan</string>
    <string name="promosyon_mesaj">Bir indirim koduna mı sahipsiniz? Kodu aşağıdaki alana girin ve indiriminizi alın.</string>
    <string name="bildirim_title">Bildirimler</string>
    <string name="yardim_title">Yardım</string>
    <string name="hakkimizda_title">Hakkımızda</string>
    <string name="odeme_title">Ödeme Politikası</string>
    <string name="kullanim_title">Kullanım Koşulları</string>
    <string name="gizlilik_title">Gizlilik Politikası</string>
    <string name="geri_bildiri_title">Geri Bildiri</string>
    <string name="adreslerim_title">Adreslerim</string>
    <string name="sikca_sorular">S.S.S</string>
    <string name="yolculuklarim_title">Yolculuklarım</string>


</resources>
