<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.logintype.signup.SignUp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_signup">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_left_arrow_white"
        android:background="@null"
        android:layout_margin="20dp"
        android:id="@+id/btn_bck_signup"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_slide"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:id="@+id/taksim_logo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_bck_signup"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/uyeOl"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:id="@+id/txt_signup"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_signup">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_kullanici3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        android:textColorHint="@color/white"
        android:theme="@style/TextLabel"
        >

        <EditText
            android:id="@+id/edt_signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ad"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_kullanici3_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_kullanici3"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        android:textColorHint="@color/white"
        android:theme="@style/TextLabel"
        >

        <EditText
            android:id="@+id/edt_signup_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/soyad"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_kullanici3_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_kullanici3_1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        android:textColorHint="@color/white"
        android:theme="@style/TextLabel"
        >

        <EditText
            android:id="@+id/edt_signup_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            />

    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button_complete"
        android:background="@null"
        android:layout_below="@+id/input_layout_kullanici3_2"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_signup_complete"
        />

    </RelativeLayout>

</ScrollView>

</RelativeLayout>
</android.support.design.widget.CoordinatorLayout>